--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,19 +5,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/public/apple-touch-icon.png"
+      href="/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/public/favicon-32x32.png"
+      href="/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/public/favicon-16x16.png"
+      href="/favicon-16x16.png"
     />
     <link rel="manifest" href="/public/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
